<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CloudAddressBook</string>
    <string name="title_activity_regist">RegistActivity</string>
    <string name="title_activity_address_book">AddressBookActivity</string>
    <string name="title_activity_contactor_detail">ContactorDetailActivity</string>
    <string name="title_activity_self_infromation">SelfInfromationActivity</string>
    <string name="title_activity_search">Search</string>
    <string name="title_activity_stranger_application">StrangerApplicationActivity</string>
    <string name="action_settings">设置</string>
    <string name="btn_login">登陆</string>
    <string name="hint_account">用户名</string>
    <string name="hint_password">密码</string>
    <string name="ime_action_login">登陆</string>
    <string name="progress_login">正在登陆，请稍后&#8230;</string>
    <string name="checkbox_rem_password">记住密码</string>
    <string name="error_incorrect_password">密码不正确！</string>
    <string name="error_invalid_account">用户名格式不正确！</string>
    <string name="error_field_required">这项不能为空！</string>
    <string name="error_invalid_password">密码格式不正确！</string>
    <string name="error_account_not_exist">用户不存在！</string>
    <string name="error_connect_failed">网络连接失败！</string>
    <string name="window_of_guest">客户之窗</string>

    <!-- 主界面 -->
    <string name="progress_loading">正在加载，请稍后&#8230;</string>
    <string name="action_logout">登出</string>
    <string name="click_again_to_exit">再按一次返回键退出！</string>

    <!-- Tab1Fragment -->
    <string name="text_xunpan"> 询盘</string>
    <string name="text_unreaded_xunpan">未读询盘 </string>
    <string name="text_total_xunpan">共有询盘 </string>
    <string name="text_visits">访问量 </string>
    <string name="text_visit_people">访问人数 </string>
    <string name="text_visits_time">访问次数 </string>
    <string name="announcement_and_notice">公告和通知</string>
    <string name="error_fail_connect">您的网络状况不太好，请稍后再试！</string>
    <string name="text_see_more">查看更多>></string>
    <string name="btn_i_know">我知道了</string>

    <!-- 公告和通知 -->
    <string name="title_activity_notice_list">公告和通知</string>
    <string name="click_to_load_next_page">点击加载下一页</string>
    <string name="click_to_load_previous_page">点击加载上一页</string>
    <string name="already_the_last_page">已经是最后一页了</string>
    <string name="text_loading">正在加载，请稍后 &#8230;</string>
    <string name="text_today_is">今天是 </string>

    <!-- 询盘 -->
    <string name="loading">正在加载，请稍后&#8230;</string>
    <string name="pull_up_to_load_next_page">上拉加载下一页</string>
    <string name="release_to_load_next_page">松开加载下一页</string>
    <string name="connect_to_internet_fail">网络连接失败</string>
    <string name="fail_to_load">加载失败，请检查网络连接！</string>
    <string name="load_success">加载成功！</string>
    <string name="load_canceled">加载已取消！</string>
    <string name="text_selected_num_before">选中了</string>
    <string name="text_selected_num_after">项</string>
    <string name="title_activity_xun_pan">询盘</string>
    <string name="search_view_hint">姓名、邮箱、电话</string>

    <!-- 询盘详情 -->
    <string name="guest_detail">个人信息</string>
    <string name="xunpan_detail">联系方式</string>
    <string name="guest_name">姓名</string>
    <string name="e_mail">邮箱</string>
    <string name="content_text">询盘内容</string>
    <string name="tel_or_fax">电话</string>
    <string name="guest_address">地址</string>
    <string name="xunpan_send_time">电话</string>
    <string name="xunpan_from_page">邮箱</string>
    <string name="msn_or_skype">MSN/Skype</string>
    <string name="use_language">使用语言</string>
    <string name="send">发送</string>
    <string name="product_name">产品名称</string>
    <string name="company_name">公司</string>
    <string name="title_activity_show_xunpan_detail">ShowXunpanDetailActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_change_pref">ChangePrefActivity</string>

</resources>
